--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -5,6 +5,10 @@ parameters:
 
 services:
     # default configuration for services in *this* file
+    app.form.registration:
+        class: AppBundle\Form\RegistrationType
+        tags:
+              - { name: form.type, alias: app_user_registration }
     _defaults:
         # automatically injects dependencies in your services
         autowire: true
@@ -39,3 +43,4 @@ services:
         arguments:
             $unit:      '%unit%'
             $timeunit:    '%timeunit%'
+
